Migrate to new activity launcher